tests/fixtures/python_errors/syntax_error.txt
  File "/home/user/project/views.py", line 12
    if user is None
                   ^
SyntaxError: invalid syntax
